--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -53,5 +53,8 @@ hook_add = '''
     \ }
 '''
 
+[[plugins]]
+repo = 'harenome/vim-mipssyntax'
+
 # [[plugins]]
 # repo = '~/Projects/VimPlugin/ffiler'
