--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -18,6 +18,9 @@ hook_add = '''
 '''
 
 [[plugins]]
+repo = 'nvim-lua/plenary.nvim'
+
+[[plugins]]
 repo = 'vim-jp/vimdoc-ja'
 hook_add = 'set helplang=ja,en'
 
