--- a/tmux/config/status.tmux.conf
+++ b/tmux/config/status.tmux.conf
@@ -56,14 +56,13 @@ set -g @batt_color_status_secondary_charging "#707070"
 set -g @batt_color_status_primary_charged "#039be5"
 set -g @batt_color_status_secondary_charged "#707070"
 
-set -g @batt_icon_charge_tier8 " " # [95%-100%]
-set -g @batt_icon_charge_tier7 " " # [80%-95%)
-set -g @batt_icon_charge_tier6 " " # [65%-80%)
-set -g @batt_icon_charge_tier5 " " # [50%-65%)
-set -g @batt_icon_charge_tier4 " " # [35%-50%)
-set -g @batt_icon_charge_tier3 " " # [20%-35%)
-set -g @batt_icon_charge_tier2 " " # (5%-20%)
-set -g @batt_icon_charge_tier1 " " # [0%-5%]
-set -g @batt_icon_status_charging " "
-set -g @batt_icon_status_charged " "
-
+set -g @batt_icon_charge_tier8 "󰁹" # [95%-100%]
+set -g @batt_icon_charge_tier7 "󰂂" # [80%-95%)
+set -g @batt_icon_charge_tier6 "󰂀" # [65%-80%)
+set -g @batt_icon_charge_tier5 "󰁿" # [50%-65%)
+set -g @batt_icon_charge_tier4 "󰁽" # [35%-50%)
+set -g @batt_icon_charge_tier3 "󰁼" # [20%-35%)
+set -g @batt_icon_charge_tier2 "󰁻" # (5%-20%)
+set -g @batt_icon_charge_tier1 "󰂎" # [0%-5%]
+set -g @batt_icon_status_charging "󰂄"
+set -g @batt_icon_status_charged "󰂄"
