--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -2,10 +2,10 @@
 repo = 'Shougo/pum.vim'
 on_event = ['InsertEnter', 'CmdlineEnter']
 hook_add = '''
-  inoremap <expr><C-n>  pum#visible() ? pum#map#select_relative(+1) : '<Cmd>normal! gj<CR>'
-  inoremap <expr><C-p>  pum#visible() ? pum#map#select_relative(-1) : '<Cmd>normal! gk<CR>'
-  inoremap <expr><Down> pum#visible() ? pum#map#select_relative(+1) : '<Cmd>normal! gj<CR>'
-  inoremap <expr><Up>   pum#visible() ? pum#map#select_relative(-1) : '<Cmd>normal! gk<CR>'
+  inoremap <expr><C-n>  pum#visible() ? pum#map#select_relative(+1, "empty") : '<Cmd>normal! gj<CR>'
+  inoremap <expr><C-p>  pum#visible() ? pum#map#select_relative(-1, "empty") : '<Cmd>normal! gk<CR>'
+  inoremap <expr><Down> pum#visible() ? pum#map#select_relative(+1, "empty") : '<Cmd>normal! gj<CR>'
+  inoremap <expr><Up>   pum#visible() ? pum#map#select_relative(-1, "empty") : '<Cmd>normal! gk<CR>'
   " <CR> は lexima.vim で定義
 '''
 hook_source = '''
