--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -167,6 +167,7 @@ on_source = 'nvim-lspconfig'
 
 [[plugins]]
 repo = 'j-hui/fidget.nvim'
+rev = 'legacy'
 on_source = 'nvim-lspconfig'
 lua_source = '''
     require('fidget').setup {
