--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -59,5 +59,15 @@ hook_add = '''
 [[plugins]]
 repo = 'harenome/vim-mipssyntax'
 
-# [[plugins]]
-# repo = '~/Projects/VimPlugin/ffiler'
+[[plugins]]
+repo = 'monaqa/dial.nvim'
+hook_add = '''
+  nmap  <C-a>  <Plug>(dial-increment)
+  nmap  <C-x>  <Plug>(dial-decrement)
+  nmap g<C-a> g<Plug>(dial-increment)
+  nmap g<C-x> g<Plug>(dial-decrement)
+  vmap  <C-a>  <Plug>(dial-increment)
+  vmap  <C-x>  <Plug>(dial-decrement)
+  vmap g<C-a> g<Plug>(dial-increment)
+  vmap g<C-x> g<Plug>(dial-decrement)
+'''
