--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -62,12 +62,12 @@ repo = 'harenome/vim-mipssyntax'
 [[plugins]]
 repo = 'monaqa/dial.nvim'
 hook_add = '''
-  nmap  <C-a>  <Plug>(dial-increment)
-  nmap  <C-x>  <Plug>(dial-decrement)
-  nmap g<C-a> g<Plug>(dial-increment)
-  nmap g<C-x> g<Plug>(dial-decrement)
-  vmap  <C-a>  <Plug>(dial-increment)
-  vmap  <C-x>  <Plug>(dial-decrement)
-  vmap g<C-a> g<Plug>(dial-increment)
-  vmap g<C-x> g<Plug>(dial-decrement)
+  nnoremap  <C-a>  <Plug>(dial-increment)
+  nnoremap  <C-x>  <Plug>(dial-decrement)
+  nnoremap g<C-a> g<Plug>(dial-increment)
+  nnoremap g<C-x> g<Plug>(dial-decrement)
+  vnoremap  <C-a>  <Plug>(dial-increment)
+  vnoremap  <C-x>  <Plug>(dial-decrement)
+  vnoremap g<C-a> g<Plug>(dial-increment)
+  vnoremap g<C-x> g<Plug>(dial-decrement)
 '''
