--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -44,7 +44,7 @@ lua_source = '''
     ddc.custom.patch_filetype({ 'vim', 'typescript', 'typescriptreact', 'astro', 'rust' }, {
         sources = { 'vsnip', 'nvim-lsp', 'around' },
     })
-    ddc.custom.patch_filetype({ 'c', 'cpp', 'cs', 'dart', 'python', 'ruby', 'lua' }, {
+    ddc.custom.patch_filetype({ 'awk', 'c', 'cpp', 'cs', 'dart', 'python', 'ruby', 'lua' }, {
         sources = { 'nvim-lsp', 'around' },
     })
     ddc.custom.patch_filetype({ 'css', 'scss' }, {
