--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -18,13 +18,7 @@ lua_add = '''
     })
     ddu.start.keymap('n', '<Leader>h', {
         sources = { 'help' },
-        name = 'ff_preview',
-        uiParams = {
-            ff = {
-                previewCol = 'round(&columns * 0.40)',
-                previewWidth = 'round(&columns * 0.55)'
-            }
-        }
+        name = 'ff_help'
     })
     ddu.start.keymap('n', '<Leader>l', {
         sources = { 'line' },
@@ -144,6 +138,7 @@ lua_source = '''
         kindOptions = {
             file = { defaultAction = 'open' },
             help = { defaultAction = 'open' },
+            action = { defaultAction = 'do' },
             cpl = { defaultAction = 'paste' }
         },
         actionOptions = {
@@ -201,6 +196,24 @@ lua_source = '''
             }
         }
     })
+
+    ddu.custom.patch_local('ff_help', {
+        uiParams = {
+            ff = {
+                winRow = 'round(&lines * 0.10)',
+                winCol = 'floor(&columns * 0.05)',
+                winHeight = 'round(&lines * 0.80)',
+                winWidth = 'floor(&columns * 0.90)',
+                previewSplit = 'vertical',
+                previewRow = 'round(&lines * 0.10)',
+                previewCol = 'round(&columns * 0.40)',
+                previewHeight = 'round(&lines * 0.80)',
+                previewWidth = 'round(&columns * 0.55)',
+                autoAction = { name = 'preview' },
+                startAutoAction = true
+            }
+        }
+    })
 '''
 
 [[plugins]]
@@ -222,6 +235,11 @@ lua_ddu-ff-filter = '''
         imap('<CR>', function()
             vim.cmd('stopinsert')
             ddu.ui.async_action('itemAction')
+        end)
+    elseif vim.b.ddu_ui_name == 'ff_help' then
+        imap('<CR>', function()
+            vim.cmd('stopinsert')
+            ddu.ui.sync_action('chooseAction')
         end)
     else
         imap('<CR>', function()
@@ -316,6 +334,10 @@ on_source = 'ddu.vim'
 
 [[plugins]]
 repo = 'Shougo/ddu-source-line'
+on_source = 'ddu.vim'
+
+[[plugins]]
+repo = 'Shougo/ddu-source-action'
 on_source = 'ddu.vim'
 
 [[plugins]]
